[gd_scene load_steps=3 format=3 uid="uid://bflmxvkhb7f7j"]

[ext_resource type="Texture2D" uid="uid://b1fjenvuef4kw" path="res://assets/ui/icons/white/arrowLeft.png" id="1_uasqk"]
[ext_resource type="Script" path="res://scenes/ui/arrows/arrow.gd" id="2_opwtr"]

[node name="ArrowLeft" type="Sprite2D"]
modulate = Color(1, 0.227451, 0.2, 1)
texture = ExtResource("1_uasqk")
script = ExtResource("2_opwtr")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -12.0
offset_top = -28.0
offset_right = 12.0
offset_bottom = 34.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
